--- a/_publications/2021-ecc.md
+++ b/_publications/2021-ecc.md
@@ -1,9 +1,7 @@
 ---
 title: "Preference-based MPC calibration"
 collection: publications
-permalink: /publication/2021-ecc
 date: 2021-06-29
 venue: '2021 European Control Conference (ECC)'
-paperurl: 'https://doi.org/10.23919/ECC54610.2021.9654900'
 ---
-Mengjia Zhu, Alberto Bemporad, Dario Piga [pdf](http://mjzhu-p.github.io/files/2021-ecc.pdf)
+Mengjia Zhu, Alberto Bemporad, Dario Piga [paper-link](https://doi.org/10.23919/ECC54610.2021.9654900), [pdf](http://mjzhu-p.github.io/files/2021-ecc.pdf)
