--- a/_publications/2023-pwas.md
+++ b/_publications/2023-pwas.md
@@ -4,4 +4,4 @@ collection: publications
 date: 2023-02-09
 venue: 'submitted'
 ---
- M. Zhu and A. Bemporad, [pdf](https://arxiv.org/pdf/2302.04686.pdf)
+ M. Zhu and A. Bemporad, [pdf](https://arxiv.org/pdf/2302.04686.pdf), [code](https://github.com/mjzhu-p/PWAS)
